[workspace]

members = [
    "lib",
    "cli"
]

[profile.dhat] # for profiling only # dhat
inherits = "release"
debug = 1

[profile.release]
overflow-checks = true # allow to easily spot bugs with the indexer
debug-assertions = true # allow to easily spot bugs with the indexer

[workspace.package]
authors = ["Kraktus"]
edition = "2021"
license = "AGPL-3.0+"
repository = "https://github.com/kraktus/helpmate-tb"
version = "0.1.0-alpha"

[workspace.dependencies]
retroboard = "0.2.8"
log = "0.4"
itertools = "0.10.3"
paste = "1"