[workspace]

members = ["lib", "cli"]

[profile.dhat] # for profiling only # dhat
debug = 1
inherits = "release"

[profile.release]
debug-assertions = true # allow to easily spot bugs with the indexer
overflow-checks = true  # allow to easily spot bugs with the indexer

[workspace.package]
authors = ["Kraktus"]
edition = "2021"
license = "AGPL-3.0+"
repository = "https://github.com/kraktus/helpmate-tb"
version = "0.1.0-alpha"

[workspace.dependencies]
itertools = "0.10.3"
log = "0.4"
paste = "1"
retroboard = "0.2.9"
rustc-hash = "1"
