[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "helpmate_tb_cli"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cached"]
cached = ["helpmate_tb/cached"]
dhat = ["dep:dhat"]
trycmd-overwrite = [] # feature to allow snapshots tests to be updated via cargo alias

[dependencies]
retroboard.workspace = true
clap = { version = "4.0", features = ["derive"] }
dhat = {version = "0.3",  optional = true }
helpmate_tb = { path = "../lib", default-features = false }
env_logger = "0.10"
log.workspace = true
itertools.workspace = true
paste.workspace = true
from-str-sequential = "0.1.0"
rustc-hash.workspace = true

[dev-dependencies]
trycmd = "0.14"