[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "helpmate_tb_cli"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cached = ["helpmate_tb/cached"]
default = ["cached"]
dhat = ["dep:dhat"]
trycmd-overwrite = [
] # feature to allow snapshots tests to be updated via cargo alias

[dependencies]
clap = { version = "4.3", features = ["derive"] }
dhat = { version = "0.3", optional = true }
env_logger = "0.10"
from-str-sequential = "0.1.0"
helpmate_tb = { path = "../lib", default-features = false }
itertools.workspace = true
log.workspace = true
paste.workspace = true
retroboard.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
trycmd = "0.14"
