[package]
name = "helpmate_tb"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cached"]
cached = ["dep:cached"]

[dependencies]
retroboard = "0.2.6"
arrayvec = { version = "0.7", features = ["serde"] }
cached = {version = "0.40", features = ["proc_macro"], optional = true}
indicatif = "0.17.2"
itertools = "0.10.3"
log = "0.4"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
zstd = "0.11.2"
deku = "0.15"
positioned-io = "0.3"

[dev-dependencies]
paste = "1"
criterion = { version = "0.4", features = ["html_reports"] }

[[bin]]
name = "checksum"
path = "src/bin/checksum.rs"

[[bench]]
name = "bench"
harness = false