[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "helpmate_tb"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cached"]
cached = ["dep:cached"]

[dependencies]
retroboard.workspace = true
arrayvec = { version = "0.7", features = ["serde"] }
cached = {version = "0.41", features = ["proc_macro"], optional = true}
indicatif = "0.17.2"
itertools.workspace = true
log.workspace = true
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
zstd = "0.12.1"
deku = "0.15.1"
positioned-io = "0.3"
rustc-hash.workspace = true

[dev-dependencies]
paste.workspace = true
criterion = { version = "0.4", features = ["html_reports"] }
binrw = "0.10"
bincode = "1"


[[bin]]
name = "checksum"
path = "src/bin/checksum.rs"

[[bench]]
name = "indexer"
harness = false

[[bench]]
name = "serialise"
harness = false