[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "helpmate_tb"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cached = ["dep:cached"]
default = ["cached"]

[dependencies]
arrayvec = { version = "0.7", features = ["serde"] }
cached = { version = "0.44", features = ["proc_macro"], optional = true }
deku = "0.16.0"
indicatif = "0.17.2"
itertools.workspace = true
log.workspace = true
positioned-io = "0.3"
retroboard.workspace = true
rustc-hash.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
zstd = "0.11.2"

[dev-dependencies]
bincode = "1"
binrw = "0.11"
criterion = { version = "0.4", features = ["html_reports"] }
paste.workspace = true


[[bin]]
name = "checksum"
path = "src/bin/checksum.rs"

[[bench]]
harness = false
name = "indexer"

[[bench]]
harness = false
name = "serialise"
